--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -65,6 +65,12 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-data-mongodb</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
