--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri = mongodb+srv://airy_nap:gy6A2UlmqzOSb1Wa@cluster0.qmz7h.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.uri = mongodb+srv://airy_nap:${SPRING_DATA_MONGODB_PASS}@cluster0.qmz7h.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
