--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -45,6 +45,11 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "axios": "^0.21.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-react-session": "^2.6.1",
+    "redux-thunk": "^2.3.0",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
@@ -60,7 +65,8 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "reactstrap": "8.9.0"
+    "reactstrap": "8.9.0",
+    "immutable": "^4.0.0-rc.12"
   },
   "devDependencies": {
     "gulp": "4.0.2",
