--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -45,6 +45,8 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "lrs": "^0.1.5",
+    "crypto-js": "^4.1.1",
     "axios": "^0.21.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
